@@ -4,6 +4,10 @@
      in fadvise `RANDOM` mode which is used to limit minimum size of HTTP range
      request.
 
+  2. Reuse prefetched footer when reading end of the file.
+
+  3. Always skip in place for gzip-encoded files.
+
 
 1.9.2 - 2018-07-18
 
